--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,11 @@
         <p class="loading hidden js-loading">Images are loading ...</p>
 
         <ul class="gallery js-gallery"></ul>
+
+        <button class="button button--centered" data-action="load-more">
+          <span class="spinner is-hidden"></span>
+          <span class="btn__label">Load more</span>
+        </button>
       </div>
     </section>
 
